// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportWallet should import with encryped wif 1`] = `
<div>
  <section
    data-testid="ImportWallet__second-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Wallet
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the import method by which you want to import the address to your Profile.
        </div>
      </div>
    </div>
    <div
      class="mt-8 space-y-6"
    >
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for=""
        >
          Import Type
        </label>
        <div
          class="relative w-full"
        >
          <div
            class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy sr-only"
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="select-list__input"
                name=""
                readonly=""
                tabindex="-1"
                value="encryptedWif"
              />
            </div>
          </div>
          <div
            class="relative w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="ImportWallet__select-menu"
              role="combobox"
            >
              <label
                for="ImportWallet__select-input"
                id="ImportWallet__select-label"
              />
              <div
                class="fixed invisible w-auto whitespace-nowrap"
              >
                Encrypted WIF
                …
              </div>
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="ImportWallet__select-menu"
                    aria-labelledby="ImportWallet__select-label"
                    autocomplete="off"
                    class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="SelectDropdown__input"
                    id="ImportWallet__select-input"
                    name=""
                    placeholder="Select option"
                    value="Encrypted WIF"
                  />
                  <span
                    class="absolute inset-y-0 flex items-center font-normal opacity-50 pointer-events-none w-full"
                    data-testid="Input__suggestion"
                  >
                    <span
                      class="truncate"
                    >
                      Encrypted WIF
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex justify-center items-center py-2 px-1"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="sc-bdnxRM AkeAK transition-transform text-theme-secondary-500"
                        height="10"
                        width="10"
                      >
                        <svg>
                          caret-down.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <ul
                aria-labelledby="ImportWallet__select-label"
                class="styles__SelectOptionsList-sc-120rtxy-0 eqsPyr"
                id="ImportWallet__select-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="encryptedWif"
        >
          Encrypted WIF
        </label>
        <div
          class="relative"
        >
          <div
            class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="ImportWallet__encryptedWif-input"
                name="encryptedWif"
                value=""
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="value"
        >
          Password
        </label>
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="ImportWallet__encryptedWif__password-input"
              name="value"
              type="password"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <button
                class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
                data-ring-focus-margin="-m-1"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</div>
`;

exports[`ImportWallet should import with wif 1`] = `
<div>
  <section
    data-testid="ImportWallet__second-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Wallet
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the import method by which you want to import the address to your Profile.
        </div>
      </div>
    </div>
    <div
      class="mt-8 space-y-6"
    >
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for=""
        >
          Import Type
        </label>
        <div
          class="relative w-full"
        >
          <div
            class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy sr-only"
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="select-list__input"
                name=""
                readonly=""
                tabindex="-1"
                value="wif"
              />
            </div>
          </div>
          <div
            class="relative w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="ImportWallet__select-menu"
              role="combobox"
            >
              <label
                for="ImportWallet__select-input"
                id="ImportWallet__select-label"
              />
              <div
                class="fixed invisible w-auto whitespace-nowrap"
              >
                WIF
                …
              </div>
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="ImportWallet__select-menu"
                    aria-labelledby="ImportWallet__select-label"
                    autocomplete="off"
                    class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="SelectDropdown__input"
                    id="ImportWallet__select-input"
                    name=""
                    placeholder="Select option"
                    value="WIF"
                  />
                  <span
                    class="absolute inset-y-0 flex items-center font-normal opacity-50 pointer-events-none w-full"
                    data-testid="Input__suggestion"
                  >
                    <span
                      class="truncate"
                    >
                      WIF
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex justify-center items-center py-2 px-1"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="sc-bdnxRM AkeAK transition-transform text-theme-secondary-500"
                        height="10"
                        width="10"
                      >
                        <svg>
                          caret-down.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <ul
                aria-labelledby="ImportWallet__select-label"
                class="styles__SelectOptionsList-sc-120rtxy-0 eqsPyr"
                id="ImportWallet__select-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="value"
        >
          WIF
        </label>
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="ImportWallet__wif-input"
              name="value"
              type="password"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <button
                class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
                data-ring-focus-margin="-m-1"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</div>
`;

exports[`ImportWallet should render 2nd step 1`] = `
<div>
  <section
    data-testid="ImportWallet__second-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Wallet
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the import method by which you want to import the address to your Profile.
        </div>
      </div>
    </div>
    <div
      class="mt-8 space-y-6"
    >
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for=""
        >
          Import Type
        </label>
        <div
          class="relative w-full"
        >
          <div
            class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy sr-only"
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="select-list__input"
                name=""
                readonly=""
                tabindex="-1"
                value="bip39"
              />
            </div>
          </div>
          <div
            class="relative w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="ImportWallet__select-menu"
              role="combobox"
            >
              <label
                for="ImportWallet__select-input"
                id="ImportWallet__select-label"
              />
              <div
                class="fixed invisible w-auto whitespace-nowrap"
              >
                Mnemonic
                …
              </div>
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="ImportWallet__select-menu"
                    aria-labelledby="ImportWallet__select-label"
                    autocomplete="off"
                    class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="SelectDropdown__input"
                    id="ImportWallet__select-input"
                    name=""
                    placeholder="Select option"
                    value="Mnemonic"
                  />
                  <span
                    class="absolute inset-y-0 flex items-center font-normal opacity-50 pointer-events-none w-full"
                    data-testid="Input__suggestion"
                  >
                    <span
                      class="truncate"
                    >
                      Mnemonic
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex justify-center items-center py-2 px-1"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="sc-bdnxRM AkeAK transition-transform text-theme-secondary-500"
                        height="10"
                        width="10"
                      >
                        <svg>
                          caret-down.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <ul
                aria-labelledby="ImportWallet__select-label"
                class="styles__SelectOptionsList-sc-120rtxy-0 eqsPyr"
                id="ImportWallet__select-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="value"
        >
          Mnemonic
        </label>
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="ImportWallet__mnemonic-input"
              name="value"
              type="password"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <button
                class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
                data-ring-focus-margin="-m-1"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="secondMnemonic"
        >
          2nd Mnemonic
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="FormLabel__optional"
          >
            optional
          </span>
        </label>
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 iqZIWh"
          disabled=""
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
              data-testid="ImportWallet__secondMnemonic-input"
              disabled=""
              name="secondMnemonic"
              type="password"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <button
                class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
                data-ring-focus-margin="-m-1"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</div>
`;

exports[`ImportWallet should render 3rd step 1`] = `
<DocumentFragment>
  <section
    data-testid="ImportWallet__third-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Wallet import is complete. Now you can use it.
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures mt-2"
      data-testid="TransactionNetwork"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="flex items-center font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdnxRM NjstW"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
        >
          Address
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <div
            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
          >
            <span
              class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
      </div>
      <div
        class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
            title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
          />
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
        >
          Balance
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <span
            class="whitespace-nowrap"
            data-testid="AmountCrypto"
          >
            33.75089801 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 gxyXCF no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
        >
          Wallet Name
        </div>
        <div
          class="flex items-center font-semibold"
        >
          ARK Wallet 1
        </div>
      </div>
      <button
        class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
        data-testid="ImportWallet__edit-alias"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="sc-bdnxRM AFVmm"
            height="16"
            width="16"
          >
            <svg>
              pencil.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ImportWallet should render as ledger import 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 tELEj flex w-12"
        >
          <div
            class="sc-bdnxRM AkeAK mx-auto"
            height="10"
            width="10"
          >
            <svg>
              chevron-left-small.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute top-1 right-1 justify-center items-center p-1 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 efrBqv flex-1"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="ImportWallet__form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-1kbqtlh-1 htQxZl"
              >
                <li
                  class="StepIndicator__StepStyled-sc-1kbqtlh-0 kcRpjv"
                />
                <li
                  class="StepIndicator__StepStyled-sc-1kbqtlh-0 cqvTyD"
                />
                <li
                  class="StepIndicator__StepStyled-sc-1kbqtlh-0 cqvTyD"
                />
                <li
                  class="StepIndicator__StepStyled-sc-1kbqtlh-0 cqvTyD"
                />
              </ul>
              <div
                class="mt-8"
                data-testid="LedgerTabs"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    data-testid="NetworkStep"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-2xl"
                          data-testid="header__title"
                        >
                          Select a Cryptoasset
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Select a cryptoasset to import your existing wallet address.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col mt-8 space-y-2"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="network"
                      >
                        Cryptoasset
                      </label>
                      <div>
                        <div
                          aria-expanded="true"
                          aria-haspopup="listbox"
                          aria-owns="NetworkStep__network-menu"
                          data-testid="SelectNetwork"
                          role="combobox"
                        >
                          <label
                            for="NetworkStep__network-input"
                            id="NetworkStep__network-label"
                          />
                          
                          <div
                            class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                          >
                            <div
                              class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
                              data-testid="SelectNetworkInput__network"
                            />
                            <div
                              class="relative flex flex-1 h-full"
                            >
                              <input
                                aria-autocomplete="list"
                                aria-controls="NetworkStep__network-menu"
                                aria-labelledby="NetworkStep__network-label"
                                autocomplete="off"
                                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                                data-testid="SelectNetworkInput__input"
                                id="NetworkStep__network-input"
                                placeholder="Enter a cryptoasset name"
                                value=""
                              />
                              
                            </div>
                          </div>
                        </div>
                        <div
                          class=""
                          data-testid="SelectNetwork__options"
                        >
                          <div
                            class="mt-6"
                          >
                            <div
                              class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
                            >
                              PUBLIC NETWORKS
                            </div>
                            <ul
                              aria-labelledby="NetworkStep__network-label"
                              class="grid grid-cols-7 gap-3 mt-3"
                              id="NetworkStep__network-menu"
                              role="listbox"
                            >
                              <li
                                class="inline-block cursor-pointer h-18"
                                data-testid="SelectNetwork__NetworkIcon--container"
                              >
                                <div
                                  aria-label="ARK"
                                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                                  data-testid="NetworkIcon-ARK-ark.mainnet"
                                >
                                  <div
                                    class="sc-bdnxRM NjstW"
                                    data-testid="NetworkIcon__icon"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      ark.svg
                                    </svg>
                                  </div>
                                </div>
                              </li>
                            </ul>
                          </div>
                          <div
                            class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
                            type="horizontal"
                          />
                          <div
                            class="mt-6"
                          >
                            <div
                              class="flex justify-between items-center"
                            >
                              <span
                                class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
                              >
                                DEVELOPMENT NETWORKS
                              </span>
                              <span
                                data-testid="SelectNetwork__developmentNetworks"
                              >
                                <label
                                  class="flex"
                                >
                                  <input
                                    class="Toggle__Input-sc-6s3wfu-0 lktEK"
                                    data-testid="SelectNetwork__developmentNetworks-toggle"
                                    type="checkbox"
                                  />
                                  <div
                                    class="Toggle__Handle-sc-6s3wfu-1 beOBjf"
                                  >
                                    <span
                                      class="Toggle__HandleInner-sc-6s3wfu-2 poMob"
                                    />
                                  </div>
                                </label>
                              </span>
                            </div>
                            <ul
                              aria-labelledby="NetworkStep__network-label"
                              class="grid grid-cols-7 gap-3 mt-3 hidden"
                              id="NetworkStep__network-menu"
                              role="listbox"
                            >
                              <li
                                class="inline-block cursor-pointer h-18"
                                data-testid="SelectNetwork__NetworkIcon--container"
                              >
                                <div
                                  aria-label="ARK Devnet"
                                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                                  data-testid="NetworkIcon-ARK-ark.devnet"
                                >
                                  <div
                                    class="sc-bdnxRM NjstW"
                                    data-testid="NetworkIcon__icon"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      ark.svg
                                    </svg>
                                  </div>
                                </div>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </section>
                </div>
              </div>
              <div
                class="flex justify-between mt-10"
              >
                <div />
                <div
                  class="flex space-x-3"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                    data-testid="Paginator__back-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Back
                    </div>
                  </button>
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
                    data-testid="Paginator__continue-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Continue
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImportWallet should render network step 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col mt-8 space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="NetworkStep__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="NetworkStep__network-input"
            id="NetworkStep__network-label"
          />
          <div
            class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="NetworkStep__network-menu"
                aria-labelledby="NetworkStep__network-label"
                autocomplete="off"
                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="SelectNetworkInput__input"
                id="NetworkStep__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6"
          >
            <div
              class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
            >
              PUBLIC NETWORKS
            </div>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-7 gap-3 mt-3"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-ark.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-bind.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      bind.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
            type="horizontal"
          />
          <div
            class="mt-6"
          >
            <div
              class="flex justify-between items-center"
            >
              <span
                class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
              >
                DEVELOPMENT NETWORKS
              </span>
              <span
                data-testid="SelectNetwork__developmentNetworks"
              >
                <label
                  class="flex"
                >
                  <input
                    class="Toggle__Input-sc-6s3wfu-0 lktEK"
                    data-testid="SelectNetwork__developmentNetworks-toggle"
                    type="checkbox"
                  />
                  <div
                    class="Toggle__Handle-sc-6s3wfu-1 beOBjf"
                  >
                    <span
                      class="Toggle__HandleInner-sc-6s3wfu-2 poMob"
                    />
                  </div>
                </label>
              </span>
            </div>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-7 gap-3 mt-3 hidden"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK Devnet"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia Testnet"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-bind.testnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      bind.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`ImportWallet should render network step without test networks 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col mt-8 space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="NetworkStep__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="NetworkStep__network-input"
            id="NetworkStep__network-label"
          />
          <div
            class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="NetworkStep__network-menu"
                aria-labelledby="NetworkStep__network-label"
                autocomplete="off"
                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="SelectNetworkInput__input"
                id="NetworkStep__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6"
          >
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-7 gap-3 mt-3"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-ark.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-bind.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      bind.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="mt-6 hidden"
          >
            <div
              class="flex justify-between items-center"
            >
              <span
                class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
              >
                DEVELOPMENT NETWORKS
              </span>
              <span
                data-testid="SelectNetwork__developmentNetworks"
              >
                <label
                  class="flex"
                >
                  <input
                    class="Toggle__Input-sc-6s3wfu-0 lktEK"
                    data-testid="SelectNetwork__developmentNetworks-toggle"
                    type="checkbox"
                  />
                  <div
                    class="Toggle__Handle-sc-6s3wfu-1 beOBjf"
                  >
                    <span
                      class="Toggle__HandleInner-sc-6s3wfu-2 poMob"
                    />
                  </div>
                </label>
              </span>
            </div>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-7 gap-3 mt-3 hidden"
              id="NetworkStep__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;
